[final] add `make run` in the Makefile

--- a/final/Makefile
+++ b/final/Makefile
@@ -1,6 +1,9 @@
-.PHONY: all clean
+.PHONY: all clean run
+testls := $(shell ls .)
+testcases := $(shell find "$$(pwd)/testcases/" -regextype sed -regex ".*\.in")
+parser_name := ./micro-ex-compiler
 all: y.tab.c y.tab.h lex.yy.c
-	gcc -Wall -o micro-ex-compiler y.tab.c lex.yy.c util.c -ly -ll
+	gcc -Wall -o $(parser_name) y.tab.c lex.yy.c util.c -ly -ll
 
 y.tab.%: parser.y
 	yacc -vd parser.y
@@ -9,4 +12,10 @@ lex.yy.c: scanner.l
 	lex scanner.l
 
 clean:
-	rm y.tab.c y.tab.h lex.yy.c micro-ex-compiler 
+	rm y.tab.c y.tab.h lex.yy.c $(parser_name)
+
+run:
+	# Loop over each testcases
+	@for file in $(testcases); do \
+		$(parser_name) $$file $${file%.*}.out; \
+	done
